style: Refactor code for clarity and consistency, remove TODO comments, and improve error handling in various classes